--- a/app/src/main/res/layout/grid_list_item.xml
+++ b/app/src/main/res/layout/grid_list_item.xml
@@ -37,6 +37,11 @@
                The height should be 194dp
                The width should match the with of the card
                The scaleType should be set to centerCrop-->
+        <androidx.appcompat.widget.AppCompatImageView
+            android:layout_width="match_parent"
+            android:layout_height="194dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"/>
 
         <!-- TODO: Create a TextView for each of the following:
                 The dog's name
