--- a/app/src/main/res/layout/grid_list_item.xml
+++ b/app/src/main/res/layout/grid_list_item.xml
@@ -37,7 +37,8 @@
                The height should be 194dp
                The width should match the with of the card
                The scaleType should be set to centerCrop-->
-        <androidx.appcompat.widget.AppCompatImageView
+        <ImageView
+            android:id="@+id/grid_image_view"
             android:layout_width="match_parent"
             android:layout_height="194dp"
             app:layout_constraintTop_toTopOf="parent"
@@ -47,6 +48,37 @@
                 The dog's name
                 The dog's age
                 The dog's hobbies-->
+        <TextView
+            android:id="@+id/grid_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="8dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/grid_image_view"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
+            tools:text="FakeName" />
+
+        <TextView
+            android:id="@+id/grid_age"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="8dp"
+            app:layout_constraintTop_toBottomOf="@id/grid_name"
+            app:layout_constraintStart_toStartOf="parent"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
+            tools:text="Age : 2"/>
+
+        <TextView
+            android:id="@+id/grid_hobbies"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="8dp"
+            app:layout_constraintTop_toBottomOf="@id/grid_age"
+            app:layout_constraintStart_toStartOf="parent"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
+            tools:text="Hobbies : sleep"/>
+
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
